# Patreon.Sort

./: Patreon.Sort.ps1  README.md
Patreon_Sort_Mac.app/Contents/: Info.plist
source/: go.mod  main.go
source/rust/: Cargo.toml
source/rust/src/: main.rs
