[package]
name = "Patreon_Sort"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.25.0", features = ["default_fonts", "persistence"] }
egui = "0.25.0"
rfd = "0.13"
csv = "1.3"

[package.metadata.bundle]
name = "Patreon_Sort"
identifier = "com.yourdomain.patreon.sort"
icon = []
version = "1.0.0"
resources = []
copyright = ""
category = "public.app-category.utilities"
short_description = ""
osx_url_schemes = []
